--- a/lab11/Feeder27/app/src/main/res/values/strings.xml
+++ b/lab11/Feeder27/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Feeder</string>
 
     <!-- Strings related to login -->
+    <string name="cookie">Cookie</string>
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
