Report and Presentation

--- a/ExecutivePresentation.tex
+++ b/ExecutivePresentation.tex
@@ -40,7 +40,7 @@
 \frametitle{Android}
 \begin{itemize}
     \item Android app allows for student login and presents a calender after the login.
-    \item Once logged in the app fetches the data as JSONarrray from the database and sets up the calendar (highlighting the dates which have deadlines)
+    \item Once logged in the app fetches the data from the database and sets up the calendar (highlighting the dates which have deadlines) using Caldroid
     \item When user clicks the date, he shall be presented with the cards showing all the deadlines/event of that date of various subjects.
 \end{itemize}
 \end{frame}
